# glinternet

./: .gitignore  DESCRIPTION  NAMESPACE  README  cleanup  configure.ac  index.html  params.json
R/: c_routines.r  check_kkt.r  get_candidates.r  glinternet.r  group_lasso.r
src/: Makefile.in  c_routines.c  fista.c  util.c  util.h
